# ThreeSixFive-Server

./: .env  Cargo.toml
src/: main.rs  pixel_deltas.rs  test.rs
src 2/: main.rs
src/api/: image_api.rs  mod.rs  recipe_api.rs  user_api.rs
src/db/: crud.rs  customer.rs  gif.rs  image.rs  mod.rs  recipe.rs
src/errors/: response.rs
src/helpers/: mock.rs
src/models/: customer.rs  gif.rs  image.rs  image_model.rs  mod.rs  recipe.rs  recipe_model.rs
src/repository/: db_error.rs  mod.rs  mongodb_repo.rs
src/routes/: customer.rs  gifs.rs  images.rs  mod.rs  recipes.rs
src/tests/: mod.rs
src/websockets/: websockets.rs
