[package]
name = "ThreeSixFive-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
strum = "0.24"
strum_macros = "0.24"
futures = "0.3"
tokio = "1.21.1"
async-std = "1.12.0"
future-utils = "0.12.1"
redis_tang = "0.3.0"
hex = "0.4.3"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]